added documentation for accumulate coloured  particles

--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -264,19 +264,17 @@ Name & Meaning \\
 \verb|visualisation_theta| & Set the theta angle of the camera.\\
 \verb|visualisation_phi| & Set the phi angle of the camera.\\
 \verb|visualisation_zoom| & Set the camera zoom.\\
-\verb|accumulate_tracks| & Not implemented.\\
-\verb|default_vis_colour| & Not implemented.\\
-\verb|pi_plus_vis_colour| & Not implemented.\\
-\verb|pi_minus_vis_colour| & Not implemented.\\
-\verb|mu_plus_vis_colour| & Not implemented.\\
-\verb|mu_minus_vis_colour| & Not implemented.\\
-\verb|mu_plus_vis_colour| & Not implemented.\\
-\verb|mu_minus_vis_colour| & Not implemented.\\
-\verb|e_plus_vis_colour| & Not implemented.\\
-\verb|e_minus_vis_colour| & Not implemented.\\
-\verb|gamma_vis_colour| & Not implemented.\\
-\verb|neutron_vis_colour| & Not implemented.\\
-\verb|photon_vis_colour| & Not implemented.\\
+\verb|accumulate_tracks| & Set to 1 to accumulate all of the simulated tracks into one vrml file. 0 for multiple files.\\
+\verb|default_vis_colour| & Set the RGB values to alter the default colour of particles.\\
+\verb|pi_plus_vis_colour| & Set the RGB values to alter the colour of positive pions.\\
+\verb|pi_minus_vis_colour| & Set the RGB values to alter the colour of negative pions.\\
+\verb|mu_plus_vis_colour| & Set the RGB values to alter the colour of positive muons.\\
+\verb|mu_minus_vis_colour| & Set the RGB values to alter the colour of negative pions.\\
+\verb|e_plus_vis_colour| & Set the RGB values to alter the colour of positrons.\\
+\verb|e_minus_vis_colour| & Set the RGB values to alter the colour of electrons.\\
+\verb|gamma_vis_colour| & Set the RGB values to alter the colour of gammas.\\
+\verb|neutron_vis_colour| & Set the RGB values to alter the colour of neutrons.\\
+\verb|photon_vis_colour| & Set the RGB values to alter the colour of photons.\\
 \end{tabularx}
 \end{center}
 \end{table*}
