Few documentation improvements

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -3,6 +3,7 @@
 \usepackage{tabularx}
 \usepackage{multirow}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \begin{document}
 
 \vspace*{2.0cm}
@@ -13,8 +14,12 @@
 \Large{ \bf{User Guide} }
 \end{center}
 
-%\chapter{Running for the First Time}
-%\include{first_time_running}
+\tableofcontents
+
+\newpage
+
+\chapter{Introduction}
+\include{introduction}
 
 \chapter{Data Structure}
 \input{data_structure}
