improved the comments in get geometry ids and also added user guide notes on the geometry system

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -3,7 +3,6 @@
 \usepackage{tabularx}
 \usepackage{multirow}
 \usepackage{graphicx}
-\usepackage{hyperref}
 \begin{document}
 
 \vspace*{2.0cm}
@@ -14,15 +13,11 @@
 \Large{ \bf{User Guide} }
 \end{center}
 
-\tableofcontents
+%\chapter{Running for the First Time}
+%\include{first_time_running}
 
-\newpage
-
-\chapter{Introduction}
-\include{introduction}
-
-\chapter{Data Structure}
-\input{data_structure}
+%\chapter{Data Structure}
+%\input{data_structure}
 
 \chapter{Monte Carlo}
 \input{simulation}
@@ -34,7 +29,8 @@
 %\include{detectors/ckov}
 %\include{detectors/kl}
 
-%\chapter{Geometry}
+\chapter{Geometry}
+\input{geometry}
 %\include{geometry_definitions}
 
 %\chapter{Appendix A: Run Control Variables}
