--- a/doc/doc_src/geometry.tex
+++ b/doc/doc_src/geometry.tex
@@ -80,6 +80,8 @@ date-time format.\\
 date-time format.\\
 \verb|get_ids_create_file| & Set to True in order to create a file which lists the geometries available within the time period specified. If set to
 False the geometry information will be printed to screen.\\
+\begin{makeimage} % force latex2html to render as an html table 
+\end{makeimage} 
 \end{tabularx}
 \end{center}
 \end{table*}
