--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, 10pt] {report}
-
+\usepackage{html}
 \usepackage{tabularx}
 \usepackage{multirow}
 \usepackage{graphicx}
@@ -18,13 +18,13 @@
 
 \newpage
 
-\chapter{Introduction}
+\chapter{What Who and How?}
 \include{introduction}
 
-\chapter{Data Structure}
+\chapter{Using and Modifying the Data Structure}
 \input{data_structure}
 
-\chapter{Monte Carlo}
+\chapter{Running the Monte Carlo}
 \input{simulation}
 
 \chapter{Geometry}
