Closes #1007 and #1008 (documentation and json file example)

--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -54,7 +54,7 @@ Name & Meaning \\
                             \item \verb|maus_virtual_hit|
                             \item \verb|maus_primary|
                           \end{itemize}\\
-\verb|beam_file|&  When using a file \verb|particle_generator|, set the input file name.\\
+\verb|beam_file|&  When using a file \verb|particle_generator|, set the input file name. Environment variables are automatically expanded by MAUS.\\
 \verb|file_particles_per_spill| & When using a file \verb|particle_generator|, this controls the number of particles per spill that will be read from the file.\\
 \verb|random_seed| & Set the random seed, which is used to generate individual random seeds for each primary (see below). \\
 \verb|definitions| & A list of dicts, each item of which is a dict defining the distribution from which to sample individual particles. \\
