doc tweaks + cdb-0.0.3.0.tar.gz in bash

--- a/doc/doc_src/geometry.tex
+++ b/doc/doc_src/geometry.tex
@@ -1,3 +1,5 @@
+\chapter{Geometry}
+\label{chapter:geometry}
 MAUS uses the online Configuration Database to store all of its geometries. These geometries have been transferred from CAD drawings which are
 modelling using the latest surveys and technical drawings available. The following section shall describe how to use the available executables to
 access and use these models. 
