--- a/doc/doc_src/introduction.tex
+++ b/doc/doc_src/introduction.tex
@@ -1,3 +1,5 @@
+\chapter{What Who and How?}
+\label{chapter:introduction}
 MAUS (MICE Analysis User Software) is the MICE project's tracking, detector reconstruction and accelerator physics analysis framework. MAUS is designed to fulfil a number of functions for physicists interested in studying MICE data:
 
 \begin{itemize}
