--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -1,3 +1,5 @@
+\chapter{Running the Monte Carlo}
+\label{chapter:simulation}
 The simulation module provides particle generation routines, GEANT4 bindings to track particles through the geometry and routines to convert modelled energy loss in detectors into digitised signals from the MICE DAQ. The Digitisation models are documented under each detector. Here we describe the beam generation and GEANT4 interface.
 
 \section{Beam Generation}
