Few modifications to the docs

--- a/doc/doc_src/mice_modules/mice_module_geometry.tex
+++ b/doc/doc_src/mice_modules/mice_module_geometry.tex
@@ -335,10 +335,12 @@ different values for x width and 2 (non-zero) values for y.
 \subsubsection{Volume Wedge}
 A wedge is a triangular prism as shown in the diagram. Here the blue line extends along the positive z-axis and the red
 line extends along the x-axis.
-
+\begin{figure}[!p]
 \begin{center}
-\includegraphics[width=13.968cm,height=8.394cm]{mice_modules/volume_hierarchy.png}
+\includegraphics[width=13.968cm,height=8.394cm]{mice_modules/wedge_geometry.png}
 \end{center}
+\caption{Schematic of the geometry of a Wedge volume.}
+\end{figure}
 \begin{center}
 \tablefirsthead{\hline
 {\bfseries Property} &
