--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -5,6 +5,9 @@
 \usepackage{multirow}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{color}
+\usepackage{listings}
+\input{rgb}
 
 % mice module (open office conversion) packages
 \usepackage[ascii]{inputenc}
@@ -34,6 +37,7 @@
 
 \include{introduction}
 \input{data_structure}
+\input{api}
 \input{simulation}
 \input{geometry}
 
