--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -7,13 +7,14 @@ Release Notes
 =============
 MAUS-v0.3.2
   The following functionality was added:
-    - 
+    - Code now builds against Geant4.9.5.p01
+    - New datacards were added enabling cuts on particle type and energy at
+      production
   If upgrading from the previous version, the following third party library
   scripts need to be rerun:
     - third_party/bash/31geant4.bash   
     - third_party/bash/40python_extras.bash   
     - third_party/bash/44cdb.bash   
-
 
 MAUS-v0.3.1
   The following functionality was added:
