--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,6 +5,13 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.3.3
+  The following functionality was added:
+    - xboa accelerator physics library was updated to use the ROOT datastructure
+  If upgrading from the previous version, the following third party library
+  scripts need to be rerun:
+    - third_party/bash/51xboa.bash
+
 MAUS-v0.3.2
   The following functionality was added:
     - Code now optionally builds against Geant4.9.5.p01. Use script in
