--- a/doc/doc_src/introduction.tex
+++ b/doc/doc_src/introduction.tex
@@ -99,7 +99,7 @@ root [0] .L $MAUS_ROOT_DIR/build/libMausCpp.so
 root [1] TBrowser b
 \end{verbatim}
 
-Note: ROOT infrastructure can only be used to plot data from nested within up to two dynamic arrays. Data nested in three or more dynamic arrays is beyond the capabilities of ROOT interactive plotting tools; explicit loops over the data are required in a PyROOT script or C++ code.
+Note: ROOT infrastructure can only be used to plot data nested within up to two dynamic arrays. Data nested in three or more dynamic arrays is beyond the capabilities of ROOT interactive plotting tools; explicit loops over the data are required in a PyROOT script or C++ code.
 
 More information on the data is available in the data structure chapter \ref{chapter:data_structure}.
 
