--- a/doc/doc_src/data_structure.tex
+++ b/doc/doc_src/data_structure.tex
@@ -78,3 +78,11 @@ In order to make these classes accessible to JSON, it is necessary to add a new 
 
 A script, \verb|bin/user/json_branch_to_data_structure_and_cpp_processor.py| is available that analyses a JSON object or JSON tree of nested objects and converts to C++ classes. The script is provided "as-is" and it is expected that developers will check the output, adding comments and tests where appropriate.
 
+\subsection{Pointer Handling}
+MAUS can handle pointers for arrays and classes using ROOT native support or a reduced version compliant with the standard JSON reference syntax, where paths are indexed relative to the root value of a JSON document. JSON references are formatted like URIs, for example the JSON object \verb|{"$ref":"#spill/recon_events/1"}| would index the second recon_event in the spill object (indexing from 0). MAUS can only handle paths relative to the top level of the JSON document. In MAUS, it is necessary to make a distinction between data that is stored as a value in C++, data that is stored as a pointer in C++ and a pointer reference - that is a C++ pointer that references some pointer-as-data defined elsewhere in the data structure.
+
+Conversion from C++ pointers to JSON pointers is handled in a type-safe way. Values-as-data are stored in the data tree converted at run time from JSON to C++ and vice versa. Pointers-as-data are handled in the same way as Values-as-data, but additionally an STL map is made. When converting from C++ to JSON, a map from the C++ pointer to the address of the JSON data is stored; when converting from JSON to C++ the map is in the opposite direction. The 
+
+JSON stores pointers as references to other parts of the data tree. This is implemented in MAUS as two concepts - when a C++ \emph{pointer} is converted to JSON, the data is stored in an STL map that maps the C++ pointer to the JSON address. JSON \emph{references} to a pointer is placed into an STL vector of references together with the path to the JSON reference. After the tree has been parsed, MAUS iterates over the vector of references and for each reference stored it looks up the JSON address and places this as a reference into the JSON tree. The conversion is fully templated and abstracted to ensure type safety. Conversion from JSON pointers to C++ pointers is handled similarly, except: the map must operate in the opposite direction, from JSON address to C++ pointer; and the vector must now store the JSON address of the reference, together with the (instantiated) C++ object and the mutator that would set the reference.
+
+ 
